<resources>
    <string name="app_name">AcmeExplorer</string>
    <string name="splash_logo_app">Splash Logo App</string>
    <string name="section_icon">Section Icon</string>
    <string name="welcome_to_acme_explorer">Welcome to Acme-Explorer!</string>
    <string name="filter">Filter</string>
    <string name="trips">Trips</string>
    <string name="buy_trip">Buy Trip</string>
    <string name="alt_trip_image">Trip image detail</string>
    <string name="filters">Filters</string>
    <string name="dates">Dates</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="price">Price</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="search">Search</string>
    <string name="icon_to_start_date">Icon to start date</string>
    <string name="icon_to_end_date">Icon to end date</string>
    <string name="image_trip">image trip</string>
    <string name="select_icon">select icon</string>
    <string name="login_email_et_hint">Email</string>
    <string name="login_password_et_hint">Password</string>
    <string name="login_button_mail_text">login</string>
    <string name="login_button_google_text">Login with Google</string>
    <string name="login_button_register_text">Register</string>
    <string name="login_mail_error_1">Email cannot be empty</string>
    <string name="login_mail_error_2">Password cannot be empty</string>
    <string name="login_mail_access_error">An error has occurred accessing</string>
    <string name="login_verified_email_error">You haven\'t verified your account yet. Do you want an email to be forwarded for verification?</string>
    <string name="login_verified_email_error_ok">Send email</string>
    <string name="login_verified_email_error_sent">The email has been sent</string>
    <string name="login_verified_email_error_no_sent">Email could not be sent</string>
    <string name="login_verified_email_error_cancel">Cancel</string>
    <string name="login_google_play_services_error">Google Play Services is not updated</string>
    <string name="login_download_gps">Update</string>
    <string name="gps_download_url">market://details?id=com.google.android.gms</string>
    <string name="market_download_url">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="default_client_id">820118149177-c0dhjhdutvkqclpn3mro5tqdqp2qsvks.apps.googleusercontent.com</string>
    <string name="login_completed">User %1$s access correctly</string>
    <string name="login_password_et_confirmation_hint">Repeat password</string>
    <string name="login_button_signup_text">Register user</string>
    <string name="signup_error_user">Email is not valid</string>
    <string name="signup_error_password">Password is not valid</string>
    <string name="signup_error_pass_not_match">The password are not match</string>
    <string name="signup_created">User created correctly</string>
    <string name="signup_create_error">Signup error</string>
    <string name="google_maps_view">Google Maps fragment view</string>
    <string name="location_title">Location</string>
    <string name="location_trip">Location Trip</string>
    <string name="no_location">No Location</string>
    <string name="location_permission_error">Location Permission Error</string>
    <string name="location_permission_retry">Location Permission Retry</string>
    <string name="don_t_you_have_a_user_account_yet">Don\'t you have an user account yet?</string>
</resources>