<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/background_main"
    tools:context=".MainActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone" />
    
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/acme_explorer_logo"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="18dp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_main_layout">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/login_email_et_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/login_password_et_hint"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button_mail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/blue_button"
                android:drawableStart="@drawable/login_button_icon"
                android:text="@string/login_button_mail_text"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button_google"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/google_login_button"
                android:drawableStart="@drawable/google_icon"
                android:text="@string/login_button_google_text"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="24dp"
                android:text="@string/don_t_you_have_a_user_account_yet"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/blue_button"
                android:text="@string/login_button_register_text"
                android:textAllCaps="true"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>
    
</LinearLayout>